--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           '" />',
       )
     </script>
-    <title>JeecgBoot-uniapp3</title>
+    <title>智趣猴</title>
     <!--preload-links-->
     <!--app-context-->
   </head>
